--- a/PredictionAssessment.Rmd
+++ b/PredictionAssessment.Rmd
@@ -42,20 +42,11 @@ library(tidyverse);
 library(broom);
 library(RColorBrewer);
 library(pROC);
-#library(gganimate);
-#library(animation);
-#knitr::opts_knit$set(root.dir = "~/Desktop/Work/BDSI2021");
 knitr::opts_chunk$set(echo = T, warning = F, message = F, cache = F);
 knitr::knit_hooks$set(mysize = function(before, options, envir) {
   if (before) 
     return(options$size);
 })
-#animation::ani.options(ani.type = "png", 
-#                       ani.dev = "png",
-#                       interval = 0.15);
-#knitr::opts_chunk$set(width = 10);
-#knitr::opts_chunk$set(tidy.opts=list(width.cutoff=40));
-recache = F;
 options(digits = 3);
 figure_scaler = 1/2;#1/2-3/8 for ioslides; ~1/3 for word, pdf
 text_scaler = 3/3;#1 for ioslides; 2/3 for word, pdf
@@ -72,15 +63,15 @@ theme_set(theme_bw())
 
 ## Start with edge pieces
 
-<img src="puzzle_pics/puzzle_pics.001.png" width="500" />
+<img src="images/puzzle_pics/puzzle_pics.001.png" width="500" />
 
 ## Sort and build high contrast/color regions
 
-<img src="puzzle_pics/puzzle_pics.003.png" width="500" />
+<img src="images/puzzle_pics/puzzle_pics.003.png" width="500" />
 
 ## Sort into knob-and-hole combinations
 
-<img src="puzzle_pics/puzzle_pics.002.png" width="500" />
+<img src="images/puzzle_pics/puzzle_pics.002.png" width="500" />
 
 
 ## How to measure puzzle strategy success/failure?
@@ -598,7 +589,7 @@ ggplot(filter(roc_data, model == "forward_pruned", step == "validation")) +
 
 ```{r, echo = FALSE, cache = TRUE, fig.height=0.72*fig.x, fig.width=0.72*fig.x}
 library(grid);library(jpeg);#
-g <- rasterGrob(readJPEG("aoc.jpg"), width=unit(1,"npc"), height=unit(1,"npc"), interpolate = FALSE)
+g <- rasterGrob(readJPEG("images/aoc.jpg"), width=unit(1,"npc"), height=unit(1,"npc"), interpolate = FALSE)
 ggplot(filter(roc_data, model == "forward_pruned", step == "validation")) + 
   annotation_custom(g, -Inf, Inf, -Inf, Inf) + 
   geom_path(aes(x = 1 - spec, 
