--- a/PredictionAssessment.Rmd
+++ b/PredictionAssessment.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Assessing Prediction Models"
 author: "https://github.com/psboonstra/prediction-lecture"
-date: "BDSI 2023; University of Michigan"
+date: "BDSI 2024; University of Michigan"
 geometry: margin=0.5in
 output: 
   ioslides_presentation:
@@ -100,21 +100,21 @@ Use 'mean squared prediction error' (MSPE) for now: $(Y - \hat Y(x))^2$
 - Generate $Y$ from logistic regression model: $\Pr(Y = 1|X=x) =  1/(1+\exp(-\alpha+ x\beta))$
 - One observation consists of $\{Y, x\}$
 - $n = 100$ observations each in training and validation
-- $p = 40$ covariates, distributed as independent normal random variables
-- $p/2 = 20$ of coefficients equal to 0.25; remaining equal to 0
+- $p = 20$ covariates, distributed as independent normal random variables
+- $p/2 = 10$ of coefficients equal to 0.25; remaining equal to 0
 - Expected prevalence of about 0.6
 - $\hat Y(x)=\hat{\Pr}(Y=1|X=x) = 1/(1+\exp(-\hat\alpha+ x\hat\beta))$
 
 ## 
 
-```{r, include = TRUE, cache = TRUE}
+```{r, include = TRUE}
 set.seed(7201969);
 #n = 200 observations; split into equal parts
 n <- 200;
 training_subset <- 1:round(n/2);
 validation_subset <- (round(n/2)+1):n;
 #p covariates
-p <- 40;
+p <- 20;
 #baseline prevalence approximately 0.6
 alpha <- log(0.6/0.4);
 #normally distributed covariates
@@ -140,11 +140,11 @@ Six strategies considered:
 - All covariates ('full')
 - Forward selection ('forward'): start with the null model, incrementally
 add in covariates that seem to improve fit
-- Forward selection with max of 1 variable / 10 observations ('forward_pruned')
+- Forward selection with max of 1 variable / 20 observations in training data ('forward_pruned')
 - Backward selection ('backward'): start will the full model, incrementally
 subtract covariates that seem to harm fit
 
-```{r, include = TRUE, cache = TRUE}
+```{r, include = TRUE}
 full_model <- glm(full_fmla,
                  data = all_data,
                  subset = training_subset, 
@@ -166,7 +166,7 @@ forward_pruned_model <-
   stepAIC(null_model,
           scope = list(upper = full_fmla),
           direction = "forward",
-          steps = max(1, floor(n/2/10)),
+          steps = max(1, floor(training_subset / 20)),
           trace = F);
 
 #backward selection
@@ -179,7 +179,7 @@ backward_model <-
 
 ## Selection 
 
-```{r, echo = TRUE, include = TRUE, cache = TRUE}
+```{r, echo = TRUE, include = TRUE}
 tidy(full_model) %>% 
   left_join(tibble(term = glue("x{1:floor(p/2)}"), 
                    nonzero = 1)) %>%
@@ -189,7 +189,7 @@ tidy(full_model) %>%
 
 ##
 
-```{r, echo = TRUE, include = TRUE, cache = TRUE}
+```{r, echo = TRUE, include = TRUE}
 tidy(forward_model) %>% 
   left_join(tibble(term = glue("x{1:floor(p/2)}"), 
                    nonzero = 1)) %>%
@@ -198,7 +198,7 @@ tidy(forward_model) %>%
 ```
 
 ## 
-```{r, echo = TRUE, include = TRUE, cache = TRUE}
+```{r, echo = TRUE, include = TRUE}
 tidy(forward_pruned_model) %>% 
   left_join(tibble(term = glue("x{1:floor(p/2)}"), 
                    nonzero = 1)) %>%
@@ -208,7 +208,7 @@ tidy(forward_pruned_model) %>%
 
 ## 
 
-```{r, echo = TRUE, include = TRUE, cache = TRUE}
+```{r, echo = TRUE, include = TRUE}
 tidy(backward_model) %>%
   left_join(tibble(term = glue("x{1:floor(p/2)}"), 
                    nonzero = 1)) %>%
@@ -218,7 +218,7 @@ tidy(backward_model) %>%
 
 ## 
 
-```{r, include = TRUE, cache = TRUE}
+```{r, include = TRUE}
 
 predict_models <- 
   list(null = null_model, 
@@ -240,7 +240,7 @@ predict_models <-
 
 $\dfrac{1}{100}\sum_{i=1}^{100} (Y_i - \hat Y(x_i))^2$ 
 
-```{r, include = TRUE, cache = TRUE}
+```{r, include = TRUE}
 predict_models %>% 
   filter(training) %>%
   group_by(model_name) %>% 
@@ -253,7 +253,7 @@ Full model has smallest MSPE in training subset
 
 $\dfrac{1}{100}\sum_{i=101}^{200} (Y_i - \hat Y(x_i))^2$ 
 
-```{r, include = TRUE, cache = TRUE}
+```{r, include = TRUE}
 predict_models %>% 
   filter(!training) %>%
   group_by(model_name) %>% 
@@ -274,21 +274,17 @@ Assuming we report pruned forward model as *the* model, is this the MSPE we shou
 
 ## Simulation study 
 
-- $n = 67;33;300$ observations in training;validation;testing
-- $p = 15$ covariates, distributed as independent normal random variables
-- 7 coefficients equal to 0.25; remaining 8 equal to 0
-- Expected prevalence of about 0.6
-- $\hat Y(x)=\hat{\Pr}(Y=1|X=x) = 1/(1+\exp(-\hat\alpha - x\hat\beta))$
-- 2000 simulated datasets
+- $n = 100;100;100$ observations in training;validation;testing
+- Same generating model as previously but repeat 2000 times
 - In each simulated dataset, only three models are taken to the testing step: the true and null models (for benchmarking) and whichever other model has best validation MSPE
 
 
 ```{r, include = TRUE, cache = TRUE}
 source("simulator.R");
-all_results <- run_sim(seed = 7201969)
+all_results <- run_sim(seed = 7201969);
 ```
 
-```{r, include = TRUE, cache = TRUE}
+```{r, include = TRUE}
 print(all_results, n = 18)
 
 observed_results <-
@@ -302,7 +298,7 @@ observed_results <-
 ##
 
 
-```{r, fig.height = 1.4*fig.y, fig.width = fig.x, cache = TRUE}
+```{r, fig.height = 1.4*fig.y, fig.width = fig.x}
 model_colors = c("black",brewer.pal(5, "Dark2"));
 ggplot(observed_results) + 
   geom_boxplot(aes(x = step, 
@@ -320,7 +316,7 @@ ggplot(observed_results) +
 
 ##
 
-```{r, fig.height = 1.4*fig.y, fig.width = fig.x, cache = TRUE}
+```{r, fig.height = 1.4*fig.y, fig.width = fig.x}
 change_in_optimism <- 
   observed_results %>%
   dplyr::select(-row_number) %>%
@@ -439,7 +435,7 @@ $1-\hat{\mathrm{spec}}(t)$ for $t\in[0,1]$, where
 
 ##
 
-```{r, cache = TRUE}
+```{r}
 # use pROC package 
 true_training_roc <- 
   predict_models %>% 
@@ -512,7 +508,7 @@ roc_data <-
 
 ##
 
-```{r, cache = TRUE, fig.height=0.72*fig.x, fig.width=1.05*fig.x}
+```{r, fig.height=0.72*fig.x, fig.width=1.05*fig.x}
 roc_plot <- 
   ggplot(filter(roc_data, model != "forward_pruned"),
          aes(x = 1 - spec,
@@ -546,9 +542,9 @@ roc_plot;
 
 For the full model:
 
-- For fixed specificity of 0.8, can plausibly expect sensitivity of about 0.4
+- For fixed specificity of 0.8, can plausibly expect sensitivity of about 0.3
 
-- If we classify based upon cutoff of $\hat Y(x) > 0.5$ versus $\hat Y(x) \leq 0.5$,we would expect sensitivity ~0.6 and specificity ~0.55
+- If we classify based upon cutoff of $\hat Y(x) > 0.5$ versus $\hat Y(x) \leq 0.5$,we would expect sensitivity ~0.6 and specificity ~0.57
 
 - Achieving high sensitivity is difficult without sacrificing specificity
 
@@ -566,7 +562,7 @@ This estimates the probability of correctly ordering the risk of a randomly sele
 
 ## AUC
 
-```{r, echo = FALSE, cache = TRUE, fig.height=0.72*fig.x, fig.width=0.72*fig.x}
+```{r, echo = FALSE, fig.height=0.72*fig.x, fig.width=0.72*fig.x}
 ggplot(filter(roc_data, model == "forward_pruned", step == "validation")) + 
   geom_path(aes(x = 1 - spec,# 
                 y = sens)) + 
@@ -593,7 +589,7 @@ ggplot(filter(roc_data, model == "forward_pruned", step == "validation")) +
 
 ## AOC = 1 - AUC
 
-```{r, echo = FALSE, cache = TRUE, fig.height=0.72*fig.x, fig.width=0.72*fig.x}
+```{r, echo = FALSE, fig.height=0.72*fig.x, fig.width=0.72*fig.x}
 library(grid);library(jpeg);#
 g <- rasterGrob(readJPEG("images/aoc.jpg"), width=unit(1,"npc"), height=unit(1,"npc"), interpolate = FALSE)
 ggplot(filter(roc_data, model == "forward_pruned", step == "validation")) + 
