--- a/PredictionLecture.qmd
+++ b/PredictionLecture.qmd
@@ -310,7 +310,8 @@ predict_models <-
 
 $\dfrac{1}{200}\sum_{i=1}^{200} (Y_i - \hat Y(x_i))^2$ 
 
-```{r, include = TRUE}
+```{r}
+#| echo: true
 predict_models %>% 
   filter(training) %>%
   group_by(model_name) %>% 
@@ -323,7 +324,8 @@ Full model has smallest MSPE in training subset
 
 $\dfrac{1}{200}\sum_{i=201}^{400} (Y_i - \hat Y(x_i))^2$ 
 
-```{r, include = TRUE}
+```{r}
+#| echo: true
 predict_models %>% 
   filter(!training) %>%
   group_by(model_name) %>% 
