--- a/PredictionTutorial.qmd
+++ b/PredictionTutorial.qmd
@@ -161,11 +161,15 @@ roc(response = breast_dx_test$malignant,
 library(readxl)
 resps <- 
   read_xlsx("BCa Diagnosis (Responses).xlsx") %>%
-  pivot_longer(cols = -Timestamp) 
+  mutate(OneMinusAUC = 1 - AUC, .keep = "unused") %>%
+  pivot_longer(cols = -Timestamp) %>%
+  mutate(value_pretty = formatC(value, format = "f", digits = 3))
 
 ggplot(resps, aes(x = value)) +
   geom_boxplot() +
   geom_point(data = resps %>% group_by(name) %>% filter(value == min(value)), y = 0, color = "red") +
+  geom_label_repel(data = resps %>% group_by(name) %>% filter(value == min(value)), 
+                   aes(label = value_pretty), y = 0, nudge_y = 0.1, size = 3, direction = "y") +
   facet_wrap(vars(name), scales = "free") +
   scale_y_continuous(breaks = NULL)
   
