--- a/PredictionTutorial.qmd
+++ b/PredictionTutorial.qmd
@@ -37,6 +37,15 @@ knitr::knit_hooks$set(mysize = function(before, options, envir) {
 })
 options(digits = 3);
 code_flag = TRUE
+knitr::opts_chunk$set(
+  out.width = "70%", # enough room to breath
+  fig.width = 6,     # reasonable size
+  fig.asp = 0.618,   # golden ratio
+  fig.align = "center" # mostly what I want
+)
+out2fig = function(out.width, out.width.default = 0.7, fig.width.default = 6) {
+  fig.width.default * out.width / out.width.default 
+}
 ```
 
 
@@ -156,7 +165,9 @@ roc(response = breast_dx_test$malignant,
 
 ```{r}
 #| eval: !expr code_flag
-#| echo: !expr code_flag
+#| echo: FALSE
+#| out-width: 100%
+#| fig-width: 8.57
 
 library(readxl)
 resps <- 
